<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productivity_tips">Productivity tips</string>
    <string name="the_newest">The newest</string>
    <string name="most_popular">Most Popular</string>
    <string name="followers">Followers</string>
    <string name="episodes">Episodes</string>
    <string name="listeners">Listeners</string>
    <string name="play_all">Play All</string>
    <string name="podcasts">Podcasts</string>
    <string name="podcast_detail">Podcast Detail</string>
    <string name="hq">HQ</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="my_playlists">My playlists</string>
    <string name="recently_added">Recently added</string>
    <string name="nothing_here">Nothing here!</string>
    <string name="be_a_creator">Be a creator</string>
    <string name="full_name">Full name</string>
    <string name="save">Save</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_to_ofline_sets">Add to ofline sets</string>
    <string name="download">Download</string>
</resources>