<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="350dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/bg"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/pp_img2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/circleImageView"
            android:src="@drawable/upload_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/secondtextColor"
                android:text="@string/upload_image"/>

            <EditText
                android:id="@+id/username_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:paddingLeft="20dp"
                android:drawableStart="@drawable/username"
                android:drawablePadding="20dp"
                android:background="@drawable/edt_txt_design"
                android:hint="@string/full_name"
                android:textSize="14dp"
                android:textColorHint="@color/secondtextColor"
                android:inputType="textEmailAddress"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_data"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_design"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="@string/save"
                android:textSize="11dp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/white"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>