<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".PodcastPlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp">

    <RelativeLayout
        android:id="@+id/relativelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_centerVertical="true"
            android:background="@color/bg"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textStyle="bold"
            android:text="@string/podcast_detail"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="20dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_centerVertical="true"
            android:background="@color/bg"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

        <ImageView
            android:id="@+id/pod_im"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/relativelay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/pod_txt"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:maxLength="20"
            android:fontFamily="@font/noto_sans"
            app:layout_constraintTop_toBottomOf="@id/pod_im"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/empty_txt"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/secondtextColor"
            android:text="Fix your mindset"
            android:textSize="14dp"
            android:maxLength="20"
            android:fontFamily="@font/noto_sans"
            app:layout_constraintTop_toBottomOf="@id/pod_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

<!--        <androidx.media3.ui.PlayerView-->
<!--            android:id="@+id/playeraudio"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="200dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/pod_txt"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"/>-->

        <SeekBar
            android:id="@+id/second_podcast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"
            app:layout_constraintTop_toBottomOf="@id/empty_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RelativeLayout
            android:id="@+id/relativelay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/second_podcast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/next_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:src="@drawable/next_left"
                android:layout_marginTop="60dp"
                android:layout_alignParentStart="true"/>

            <ImageButton
                android:id="@+id/playPodcast"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="60dp"
                android:background="@drawable/btn_design3"
                android:src="@drawable/podcast_pause" />

            <ImageButton
                android:id="@+id/next_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:src="@drawable/next_right"
                android:layout_marginTop="60dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/download"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/download"
            android:textColor="@color/white"
            android:fontFamily="@font/noto_sans"
            android:background="@drawable/btn_design4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativelay3"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/offline_listen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/add_to_ofline_sets"/>
        </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relativelay2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/view_text"
                        android:layout_centerVertical="true"
                        android:background="@color/bg"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:textStyle="bold"
                        android:text="@string/hq"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"
                        android:textSize="20dp"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/list"
                        android:layout_centerVertical="true"
                        android:background="@color/bg"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>